[package]
name = "oxide"
version = "0.2.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
html2text = "0.16.7"
ratatui = "0.30.0"
readability-rust = "0.1.0"
reqwest = "0.13.2"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.51.1", features = ["full"]}
toml = "1.1.2"
tui-markdown = "0.3.7"
